set value to array of Hstore field

--- a/ceeq/apps/queries/templates/q_projects/projects.html
+++ b/ceeq/apps/queries/templates/q_projects/projects.html
@@ -142,7 +142,7 @@
                                         </a>
                                     {% endif %}
                                 </td>
-                                <td> N/A </td>
+                                <td> {{ project.instance.url }} </td>
                             </tr>
                         {% endfor %}
                     </tbody>
