pie chart works for Internal/UAT tab

--- a/ceeq/apps/queries/templates/q_project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail.html
@@ -209,14 +209,13 @@
 {#    <script type='text/javascript' src="{% static 'common/momentjs/moment.js' %}"></script>#}
 
     <script type="text/javascript">
-        var score = parseFloat({{ project.score }});
 
         var data_include_uat = {{ dd_pie_data_include_uat | safe }};
         var data_exclude_uat = {{ dd_pie_data_exclude_uat | safe }};
         var data_only_uat = {{ dd_pie_data_only_uat | safe }};
-        var data_custom = {{ dd_pie_data_custom | safe }};
+{#        var data_custom = {{ dd_pie_data_custom | safe }};#}
 
-        var data_ceeq_trend_graph = {{ ceeq_trend_graph |safe }};
+{#        var data_ceeq_trend_graph = {{ ceeq_trend_graph |safe }};#}
 
         var last_tab = '{{ last_tab }}';
 
@@ -241,11 +240,11 @@
             $('#export_data_only_uat').hide();
             $('#qei_log_only_uat').show();
         }
-        if (data_custom[3] == 103 ) {
-            $('#component_percentage_pie_chart_custom').hide();
-            $('#export_data_custom').hide();
-            $('#qei_log_custom').show();
-        }
+{#        if (data_custom[3] == 103 ) {#}
+{#            $('#component_percentage_pie_chart_custom').hide();#}
+{#            $('#export_data_custom').hide();#}
+{#            $('#qei_log_custom').show();#}
+{#        }#}
     </script>
 
 {% endblock %}
