Add new migration files etc.

--- a/ceeq/apps/queries/templates/q_projects/projects.html
+++ b/ceeq/apps/queries/templates/q_projects/projects.html
@@ -85,7 +85,7 @@
                 </table>
             </div>
         {% else %}
-        <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a>
+        <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'q_project_new' %}"> New Project </a>
         </small>
         <p>No projects available</p>
         {% endif %}
