--- a/ceeq/apps/queries/templates/q_projects/projects.html
+++ b/ceeq/apps/queries/templates/q_projects/projects.html
@@ -14,8 +14,8 @@
                         {% if superuser %}
                             <i class="fa fa-pencil fa=lg"></i> Create a <a href="{% url 'q_project_new' %}"> New Project </a> &nbsp; | &nbsp;
                         {% endif %}
-                        <i class="fa fa-cloud-upload fa-lg"></i><a href="{% url 'defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
-                        <i class="fa fa-refresh fa-lg"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
+                        <i class="fa fa-cloud-upload fa-lg"></i><a href="{% url 'query_jira_data_all' %}" id="query_jira_data"> Query JIRA Data</a> &nbsp; | &nbsp;
+                        <i class="fa fa-refresh fa-lg"></i><a href="{% url 'calculate_score_all'  %}" id="calculate_score"> Calculate Score</a>
                     </small>
                 </div>
                 <div class="col-md-2">
