trend graph is shown

--- a/ceeq/apps/queries/templates/q_project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail.html
@@ -215,7 +215,8 @@
         var data_only_uat = {{ dd_pie_data_only_uat | safe }};
 {#        var data_custom = {{ dd_pie_data_custom | safe }};#}
 
-{#        var data_ceeq_trend_graph = {{ ceeq_trend_graph |safe }};#}
+        var trend_include_uat = {{ ceeq_trend_graph_include_uat |safe }};
+        var trend_exclude_uat = {{ ceeq_trend_graph_exclude_uat |safe }};
 
         var last_tab = '{{ last_tab }}';
 
