--- a/ceeq/apps/queries/templates/q_project_detail/project_detail_custom.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail_custom.html
@@ -58,11 +58,11 @@
 <div class="row">
     <legend>Components Weighted Factors (Scales: 0 -1)</legend>
     <p>
-        Project CEEQ Score:
-        {% if project.score > 10 %}
+        Project CEEQ Custom Score:
+        {% if custom_score > 10 %}
             Out of Range
         {% else %}
-            <strong>{{ project.score|floatformat:2 }}</strong>
+            <strong>{{ custom_score|floatformat:2 }}</strong>
         {% endif %}
     </p>
     <p>Standard Component Names: <strong>{{ component_names_standard }}</strong></p>
