--- a/ceeq/apps/queries/templates/q_project_detail/project_detail_exclude_uat.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail_exclude_uat.html
@@ -57,7 +57,7 @@
 <div class="row">
     <legend>Components Weighted Factors (Scales: 0 -1)</legend>
     <p>
-        Project CEEQ Score:
+        Project CEEQ Internal Testing Score:
         {% if internal_score > 10 %}
             Out of Range
         {% else %}
