--- a/ceeq/apps/queries/templates/q_project_detail/project_detail_include_uat.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail_include_uat.html
@@ -58,7 +58,7 @@
 <div class="row">
     <legend>Components Weighted Factors (Scales: 0 -1)</legend>
     <p>
-        Project CEEQ Score:
+        Project CEEQ Overall Score:
         {% if overall_score > 10 %}
             Out of Range
         {% else %}
