--- a/ceeq/apps/queries/templates/q_project_detail/project_detail_only_uat.html
+++ b/ceeq/apps/queries/templates/q_project_detail/project_detail_only_uat.html
@@ -33,7 +33,7 @@
 <div class="row">
     <legend>Components Weighted Factors (Scales: 0 -1)</legend>
     <p>
-        Project CEEQ Score:
+        Project CEEQ UAT Score:
         {% if uat_score > 10 %}
             Out of Range
         {% else %}
