Home bar charts shown

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -106,9 +106,11 @@
                 <div class="collapse navbar-collapse" id="main-navbar">
                     <ul class="nav navbar-nav">
                         <li><a href="{% url 'home' %}"><i class="fa fa-home"></i> Home </a></li>
-                        <li><a href="{% url 'projects' %}"><i class="fa fa-bar-chart-o"></i> Projects</a> </li>
+                        <li><a href="{% url 'q_projects' %}"><i class="fa fa-bar-chart-o"></i>Queries</a></li>
+                        <li><a href="#"><i class="fa fa-table fa-fw"></i>Usage</a> </li>
+{#                        <li><a href="{% url 'projects' %}"><i class="fa fa-bar-chart-o"></i> Projects</a> </li>#}
                         <li><a href="{% url 'help_guide' %}"><i class="fa fa-thumbs-o-up"></i> Help</a> </li>
-                        <li><a href="{% url 'q_projects' %}">Queries</a></li>
+
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
