update ceeq indicator field of instance, fix return component name error if more than one item

--- a/ceeq/apps/usage/templates/usage.html
+++ b/ceeq/apps/usage/templates/usage.html
@@ -8,6 +8,8 @@
 
             <div id="usage_project_access" style="width: 100%; height: 600px;" ></div>
 
+            <p align="right">Projects visited today might not correct.</p>
+
         </div>
 {% endblock %}
 
