--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -80,7 +80,7 @@
                                 <p>CEEQ West developed solutions monitoring system can be accessed online at
                                     <a href="{% url 'landing' %}">{{ base_url }}{% url 'landing' %}</a> </p>
                                 <p>CEEQ Documentation can be accessed online at
-                                <a href="{% url 'help_guide' %}">{{ base_url }}{% url 'help_guide' %} </a> </p>
+                                <a href="{% url 'help:guide' %}">{{ base_url }}{% url 'help:guide' %} </a> </p>
                             </div>
 
                             <div id="introduction_involved">
