--- a/ceeq/apps/users/templates/user_management.html
+++ b/ceeq/apps/users/templates/user_management.html
@@ -8,25 +8,25 @@
                 <tr>
                     <th class="col-xs-2">
                         {% if sort == 'username' %}
-                            <a href="{% url 'user_management' %}?sort=-username">
+                            <a href="{% url 'users:management' %}?sort=-username">
                             <strong>Username</strong></a>&nbsp;<i class="fa fa-sort-asc"></i>
                         {% elif sort == '-username' %}
-                            <a href="{% url 'user_management' %}?sort=username">
+                            <a href="{% url 'users:management' %}?sort=username">
                             <strong>Username</strong></a>&nbsp;<i class="fa fa-sort-desc"></i>
                         {% else %}
-                            <a href="{% url 'user_management' %}?sort=username">
+                            <a href="{% url 'users:management' %}?sort=username">
                             <strong>Username</strong></a>&nbsp;<i class="fa fa-sort"></i>
                         {% endif %}
                     </th>
                     <th class="col-xs-2">
                         {% if sort == 'last_login' %}
-                            <a href="{% url 'user_management' %}?sort=-last_login">
+                            <a href="{% url 'users:management' %}?sort=-last_login">
                             <strong>Last Login</strong></a>&nbsp;<i class="fa fa-sort-asc"></i>
                         {% elif sort == '-last_login' %}
-                            <a href="{% url 'user_management' %}?sort=last_login">
+                            <a href="{% url 'users:management' %}?sort=last_login">
                             <strong>Last Login</strong></a>&nbsp;<i class="fa fa-sort-desc"></i>
                         {% else %}
-                            <a href="{% url 'user_management' %}?sort=-last_login">
+                            <a href="{% url 'users:management' %}?sort=-last_login">
                             <strong>Last Login</strong></a>&nbsp;<i class="fa fa-sort"></i>
                         {% endif %}
                     </th>
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             {% for user in users %}
-                <form method="post" action="{% url 'user_update' user.id %}">
+                <form method="post" action="{% url 'users:user_update' user.id %}">
                     <tr>
                         <td>{{ user.username }}</td>
                         <td>{{ user.last_login }}</td>
