--- a/ceeq/apps/users/templates/user_settings.html
+++ b/ceeq/apps/users/templates/user_settings.html
@@ -9,7 +9,7 @@
             <legend>User Settings</legend>
             <p>Please select following issue types to count in CEEQ Score. <strong>Bug</strong> issue type is manadatory.</p>
         </div>
-        <form method="post" action="{% url 'user_settings_update' %}">
+        <form method="post" action="{% url 'users:user_settings_update' %}">
             <table class="table table-striped table-hover table-condensed" style="width: 50%;">
                 <thead>
                     <tr>
