--- a/ceeq/apps/search/templates/search.html
+++ b/ceeq/apps/search/templates/search.html
@@ -10,44 +10,37 @@
             <table class="table table-striped table-hover table-condensed table-bordered" style="text-transform: capitalize;">
                 <thead>
                     <tr>
-                        <td class="col-md-2"><strong>Name</strong></td>
-                        <td class="col-md-6"><strong>JIRA URL</strong></td>
-                        <td class="col-md-4"><strong>Evaluation</strong></td>
-                        <td class="col-md-2"><strong>Update</strong></td>
+                        <td class="col-md-3"><strong>Name</strong></td>
+                        <td class="col-md-3"><strong>JIRA URL</strong></td>
+                        <td class="col-md-2"><strong>Evaluation</strong></td>
+                        <td class="col-md-4"><strong>Instance</strong></td>
                     </tr>
                 </thead>
                 <tbody>
                     {% for project in projects %}
                         <tr>
-                            <td><a href='{% url 'project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
-                            <td><a href='http://jira.west.com/browse/{{ project.jira_name }}' target="_blank">{{ project.jira_name }}</a></td>
+                            <td><a href='{% url 'q_project_detail' project.id%}'>{{ project.name|truncatechars:20 }}</a></td>
+                            <td><a href='{{ project.instance.url }}/issues/?jql=project={{ project.jira_key }}' target="_blank">{{ project.jira_key }}</a></td>
                             <td>
                                 {% if project.score == 101 %}
                                     No created issues
                                 {% elif project.score == 102 %}
-                                    <a href="{% url 'project_defects_density' project.id %}">Out of Range</a>
+                                    Out of Range
                                 {% elif project.score == 103 %}
-                                    <a href="{% url 'project_defects_density' project.id %}"> No open issues</a>
-
+                                    No open issues
                                 {% elif project.score == 104 %}
                                     No JIRA Data
                                 {% elif project.score == 109 %}
                                     No evaluate
                                 {% else %}
-                                    <a href="{% url 'project_defects_density' project.id %}">
-                                        {% if project.score < 0 %}
-                                            <font color="red">{{ project.score |floatformat:2 }}</font>
-                                        {% else %}
-                                            {{ project.score |floatformat:2 }}
-                                        {% endif %}
-                                    </a>
-                                    {% if superuser %}
-                                        <i class="fa fa-indent"></i>
-                                        <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
+                                    {% if project.internal_score < 0 %}
+                                        <font color="red">{{ project.internal_score |floatformat:2 }}</font>
+                                    {% else %}
+                                        {{ project.internal_score |floatformat:2 }}
                                     {% endif %}
                                 {% endif %}
                             </td>
-                            <td><a href="{% url 'project_update_scores' project.id %}" style="color: green; padding-left: 25%; cursor: pointer; cursor: hand;"><i class="fa fa-refresh"></i></a> </td>
+                            <td>{{ project.instance.url }} </td>
                         </tr>
                     {% endfor %}
                 </tbody>
